[package]
name = "lunash"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
directories = "6.0.0"
mlua = { version = "0.10.5", features = ["luajit", "vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["native-tls-vendored", "blocking"] }
